Added back button where required, fixed overlapping issue when drawer is opened, removed ‘Tags’ header when no tags added, changed position of Attach button and added logic when a backtest is attached, added preview option in post reply

--- a/src/components/common/aq-sub-toolbar.html
+++ b/src/components/common/aq-sub-toolbar.html
@@ -23,7 +23,7 @@
                 display: flex;
                 align-items: center;
                 position: fixed;
-                z-index: 20;
+                /*z-index: 20;*/
             }
 
             ::content #menu-icons {
