--- a/src/components/editor/aq-editor-home-strategy-item.html
+++ b/src/components/editor/aq-editor-home-strategy-item.html
@@ -38,7 +38,7 @@
             border-radius: 2px;
             justify-content: flex-start;
             position: relative;
-            z-index: 1;
+            /*z-index: 1;*/
         }
 
         .row paper-checkbox {
@@ -51,7 +51,7 @@
             --paper-checkbox-checked-color: #cc6666;
             -- #24293d;
             -- #99ced4;
-            z-index: 10;
+            /*z-index: 10;*/
         }
 
         /*.row-upper-container {*/
@@ -62,7 +62,7 @@
         .strategy-bt {
             position: absolute;
             right: 10px;
-            z-index: 20;
+            /*z-index: 20;*/
             cursor: pointer;
             top:7px;
         }
@@ -75,7 +75,7 @@
 
         .strategy-created-date {
             position: absolute;
-            z-index: 1;
+            /*z-index: 1;*/
             width: 100%;
             text-align: center;
         }
@@ -97,7 +97,7 @@
         }
 
         .strategy-name {
-            z-index: 20;
+            /*z-index: 20;*/
             cursor: pointer;
         }
 
