--- a/src/components/analyze/aq-analyze-home-menu.html
+++ b/src/components/analyze/aq-analyze-home-menu.html
@@ -14,7 +14,7 @@
 		  --margin-bottom: 12px;
 		  position: relative;
 		  display:none;
-		  z-index:2;
+		  /*z-index:2;*/
 		}
 	
 		#search iron-icon {
@@ -44,7 +44,7 @@
 		  @apply(--paper-font-body1);
 		  width:100%;
 		  font-size: 16px;
-		  z-index: 2;
+		  /*z-index: 2;*/
 		}
 
 		#searchbox:focus {
