--- a/src/components/community/aq-community-postdetail.html
+++ b/src/components/community/aq-community-postdetail.html
@@ -32,12 +32,6 @@
             color: #24293d;
             height: 100%;
         }
-
-        .goBackButton {
-            margin-left: -7px;
-            margin-bottom: 10px;
-        }
-
         paper-icon-button {
             padding-left: 0px;
         }
@@ -55,6 +49,24 @@
         aq-community-postdetail-content{
             --aq-community-postdetail-content-box-shadow:0 3px 8px rgba(0,0,0,0.2);
             --aq-community-postdetail-content-padding:10px 20px 10px 10px;
+        }
+        .header-container {
+            background-color: #fff;
+            height: 55px;
+            position: relative;
+            left:-20px;
+            margin-bottom: 10px;
+        }
+        #backIcon {
+            color: #cc4444;
+            transform: scale(1.6, 1.6);
+        }
+        .header-container h1 {
+            font-size: 0.9em;
+            color: #cc4444;
+            margin-left: 0px;
+            font-weight: 400;
+            padding: 0;
         }
 
     </style>
@@ -96,6 +108,12 @@
                                            <!--on-click="goBack"></paper-icon-button>-->
                         <!--<div class="flex"><p>Back to Community</p></div>-->
                     <!--</div>-->
+                    <div class="layout horizontal center header-container">
+                        <paper-icon-button id="backIcon" noink class="self-center" title="Go Back" icon="chevron-left"
+                                           on-tap="goBack"></paper-icon-button>
+
+                        <h1>Back to Community</h1>
+                    </div>
 
                     <aq-community-postdetail-header
                             post-header='{{threadDetails}}'>
