--- a/src/components/editor/aq-editor-home-menu.html
+++ b/src/components/editor/aq-editor-home-menu.html
@@ -18,7 +18,7 @@
             @apply(--paper-font-body1);
             width: 80%;
             font-size: 14px;
-            z-index: 2;
+            /*z-index: 2;*/
             background-color: #fff;
             box-shadow: 0 1px 4px rgba(0, 0, 0, 0.2);
             transition: all 0.4s ease-in-out;
